samples/_failures_safe/1761310554_1267ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30759a04.c: In function ‘main’:
./samples/SAFE/__tmp_30759a04.c:157:5: error: expected declaration or statement at end of input
  157 |     if (product.data != NULL) {
      |     ^~
./samples/SAFE/__tmp_30759a04.c:157:5: error: expected declaration or statement at end of input
